--- a/package.json
+++ b/package.json
@@ -25,22 +25,22 @@
   },
   "dependencies": {
     "bluebird": "^3.3.4",
-    "debug": "^2.0.0",
-    "lodash": "^2.4.1",
-    "express": "^4.9.3",
-    "compression": "^1.6.0",
     "body-parser": "^1.8.2",
-    "helmet": "^0.15.0",
+    "compression": "^1.6.0",
     "cors": "^2.4.1",
-    "method-override": "^1.0.2",
-    "express-cache-ctrl": "^1.0.1"
+    "debug": "^2.0.0",
+    "express": "^4.9.3",
+    "express-cache-ctrl": "^1.0.1",
+    "helmet": "^3.18.0",
+    "lodash": "^4.17.11",
+    "method-override": "^3.0.0"
   },
   "devDependencies": {
-    "morgan": "^1.1.1",
-    "mocha": "^1.21.5",
+    "chai": "^1.10.0",
+    "mocha": "^6.1.4",
     "mock-req": "^0.1.0",
     "mock-res": "^0.5.0",
-    "supertest": "^1.1.0",
-    "chai": "^1.10.0"
+    "morgan": "^1.1.1",
+    "supertest": "^4.0.2"
   }
 }
